--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: joe@veloschmiede.de
 url: https://github.com/???
 description: "Hi there! I am João de Jesus Marques and if you think we should collaborate on any project - contact me on any channel and lets have a chat!"
 keywords: "Bikes,Fahrrad,Fixed"
-skills: "Bikes Bikes | Elsa Elsa | Luna Luna"
+skills: "Fahrräder jeder Art | E-Bikes| Ergonomische anpassung "
 meta_author: João de Jesus Marques
 
 # Google webmaster tools
@@ -25,7 +25,7 @@ bing_verify:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
+  primary: ffd700 #4169E1
   primary-rgb: "24,288,156" #"128,179,255"
   secondary: 2c3e50 #FD6E8A
   secondary-dark: 233140 #A2122F
