--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Joe's Veloschmiede
 email: joe@veloschmiede.de
 url: https://github.com/???
 description: "Hi there! I am João de Jesus Marques and if you think we should collaborate on any project - contact me on any channel and lets have a chat!"
-keywords: "Fahhräder, e-bike, Werkstatt, fahrradwerksatatt"
+keywords: "Fahhräder, e-bike, Werkstatt, fahrradwerkstatt"
 skills: "Fahrräder jeder Art | E-Bikes| Ergonomische anpassung "
 meta_author: João de Jesus Marques
 
