--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ bing_verify:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: #000000 #f09200
-  primary-rgb: "0,0,0" "240,146,0"
+  primary: #000000 #FFA500
+  primary-rgb: "0,0,0" "255,165,0"
   secondary: 2c3e50 #FD6E8A
   secondary-dark: 233140 #A2122F
 
