--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Joe's Veloschmiede
 email: joe@veloschmiede.de
 url: https://github.com/???
 description: "Hi there! I am João de Jesus Marques and if you think we should collaborate on any project - contact me on any channel and lets have a chat!"
-keywords: "Bikes,Fahrrad,Fixed"
+keywords: "Fahhräder, E-Bike, Werkstatt, Fahrradwerkstatt"
 skills: "Fahrräder jeder Art | E-Bikes| Ergonomische anpassung "
 meta_author: João de Jesus Marques
 
@@ -50,9 +50,9 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: Somewhere in...
-  - line: 49610 Quakenbrück
-  - line: Lower Saxony - Germany
+  - line: Veloschmiede
+  - line: 49635 Badbergen
+  - line: Am ende des Radwegs
 
 # Credits content
 credits:
