--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ social:
 address:
   - line: Veloschmiede
   - line: 49635 Badbergen
-  - line: Am ende des Radwegs
+  - line: Am Ende des Radwegs
 
 # Credits content
 credits:
