--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Joe's Veloschmiede
 email: joe@veloschmiede.de
 url: https://github.com/???
 description: "Hi there! I am João de Jesus Marques and if you think we should collaborate on any project - contact me on any channel and lets have a chat!"
-keywords: "Fahhräder, E-Bike, Werkstatt, Fahrradwerkstatt"
-skills: "Fahrräder jeder Art | E-Bikes| Ergonomische anpassung "
+keywords: "Fahhräder, Fahrrad, E-Bike, E-Bikes, Werkstatt, Fahrradwerkstatt"
+skills: "Fahrräder jeder Art | E-Bikes | Ergonomische Anpassung"
 meta_author: João de Jesus Marques
 
 # Google webmaster tools
