--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ bing_verify:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: ffd700 #4169E1
+  primary: f09200 #4169E1
   primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
+  secondary: #000000 #FD6E8A
   secondary-dark: 233140 #A2122F
 
 # Footer settings
