--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ bing_verify:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: f09200 #4169E1
+  primary: f09200 #030303
   primary-rgb: "24,288,156" #"128,179,255"
   secondary: #030303 #FD6E8A
   secondary-dark: 233140 #A2122F
