new version fixes

--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,12 @@ url: https://github.com/???
 description: "Hi there! I am João de Jesus Marques and if you think we should collaborate on any project - contact me on any channel and lets have a chat!"
 keywords: "Fahhräder, Fahrrad, E-Bike, E-Bikes, Werkstatt, Fahrradwerkstatt"
 # skills: "Fahrräder jeder Art | E-Bikes | Ergonomische Anpassung"
+callme: Einfach anrufen und Termin vereinbaren
 skills: |
-  Fahrräder jeder Art | E-Bikes | Ergonomische Anpassung
-services: |
+  E-Bikes und Fahrräder jeder Art<br>
   Service vor Ort<br>
   Zubehör und Ersatzteile<br>
-  Persönliche Anpassung<br>
+  Persönliche und ergonomische Anpassung<br>
   Beratung und Optimierung
 meta_author: João de Jesus Marques
 
